# printer-nester

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: layout_search_results.json
src/printer_nester/: __init__.py  __main__.py  app.py
src/printer_nester/core/: __init__.py  artboard.py  artwork_import.py  auto_nest.py  cut_paths.py  grid_nest.py  image_import.py  item_transform.py  layout_search.py  markers.py  pdf_export.py  project.py  space_nest.py
src/printer_nester/ui/: artboard_panel.py  item_panel.py  main_window.py  preferences.py  qt_settings.py  ruler.py  viewport.py
tests/: test_layout_search.py  test_viewport.py
