[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "printer-nester"
version = "0.1.0"
description = "Desktop app for preparing artwork for print and cut workflows."
requires-python = ">=3.11"
dependencies = [
    "PySide6==6.9.0",
    "Pillow==11.2.1",
    "PyMuPDF==1.25.5",
    "shapely==2.1.1",
    "pyclipper==1.3.0.post6",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
]

[project.scripts]
printer-nester = "printer_nester.app:main"
layout-search = "printer_nester.core.layout_search:main"

[tool.setuptools.packages.find]
where = ["src"]
